Commit to the bit

--- a/activities/micahk.html
+++ b/activities/micahk.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    hi everyone
+    I get help by asking the Kumu for help and coming to P2 after hours with the tutors fro help
+    Engagment assignments are due at 11:59 but are not graded until 5 in the morning
+    The different tags the we disscused are DOCTYPE which is a type of doc that we are writing on, html is website, title head and body are not seen but are vital to writing.
 </body>
 </html>
