--- a/activities/micahk.html
+++ b/activities/micahk.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    I get help by asking the Kumu for help and coming to P2 after hours with the tutors fro help
-    Engagment assignments are due at 11:59 but are not graded until 5 in the morning
+    <h1>Engagement Assignments</h1>
+    <p>I get help by asking the Kumu for help and coming to P2 after hours with the tutors fro help</p>
+    <p>Assignments are due at 11:59 but are not graded until 5 in the morning</p>
     The different tags the we disscused are DOCTYPE which is a type of doc that we are writing on, html is website, title head and body are not seen but are vital to writing.
 </body>
 </html>
