--- a/activities/micahk.html
+++ b/activities/micahk.html
@@ -9,6 +9,7 @@
     <h1>Engagement Assignments</h1>
     <p>I get help by asking the Kumu for help and coming to P2 after hours with the tutors fro help</p>
     <p>Assignments are due at 11:59 but are not graded until 5 in the morning</p>
-    The different tags the we disscused are DOCTYPE which is a type of doc that we are writing on, html is website, title head and body are not seen but are vital to writing.
+    <p>The different tags the we disscused are DOCTYPE which is a type of doc that we are writing on, html is website, title head and body are not seen but are vital to writing.</p>
+    <p>Projects are due on wednesday at 11:59pm and if you are late with them you can use 4 chances to help with your grade</p>
 </body>
 </html>
