--- a/projects/webinternet.html
+++ b/projects/webinternet.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Micah Kanana</h1>
     <h2>Internet</h2>
-    <p>A place where computers talk to each other.</p>
+    <p>A place where computers talk to each other. Also the place fro online activity.</p>
     <h2>Web</h2>
     <p>A place where people talk to each other online.</p>
     <h2>How are the Internet and Web different?</h2>
