--- a/activities/html_tags.html
+++ b/activities/html_tags.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <h1>HTML Tags</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
     <p>paragraph text</p>
-    Hello I want to help out 
-    <br>
-    with stuff
+    <p><em>BYU Hawai'i</em></p>
+
+    Hello <strong>I want to help out</strong> with stuff
+    <Blockquote> Basically pressing tab on google docs, this is called block quoting.</Blockquote>
+    <!-- wassup braddah -->
 </body>
 </html>
