--- a/activities/list.html
+++ b/activities/list.html
@@ -15,6 +15,10 @@
         <li>Kepenas</li>
         <li>Icy Ponds</li>
     </ul>
+    <dl>
+        <dt>Pokai</dt>
+        <dd>Croms,Hercs,Waimea</dd>
+    </dl>
     <p>I can find the lecture notes on the home page on canvas.</p>
     <p>My projects are due on wednesday at 11:59pm but they can be turned in at 5 in the morning.</p>
     <p>Phrase tags are tags we put in the middle of sentences that help selecty text.</p>
@@ -23,7 +27,7 @@
     <p>ul tags create a list that is unordered</p>
     <p>dl tags are a description list</p>
     <p>they are generally the same thing but have different purposes</p>
-    
+
 
 </body>
 </html>
