--- a/projects/ProfilePage.html
+++ b/projects/ProfilePage.html
@@ -16,6 +16,7 @@
         <li>Waimea Bay</li>
         <li>Hercules Rock</li>
         <li>Cromwell Beach</li>
+        <li>Kapena Falls</li>
     </ol>
     
     <blockquote>&copy;"If my life is like a jigsaw, with the pieces out of place, come on over, put a smile upon my face."</blockquote>
