--- a/projects/intrest/intrest.html
+++ b/projects/intrest/intrest.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intrest</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><h1>Intrest</h1></header>
@@ -13,9 +14,22 @@
         <span>Intrest</span>
     </nav>
     <main>
-        <h1>Main Intrest</h1>
+        <h1>Main Intrest - Jam Sessions</h1>
+        <p class="Ukulele">Ukulele</p>
+        <p id="Jamming">Like to Jam with the braddahs</p>
         <p>One of the main things that keep me intrested is either hanging out with friends or playing ukulele and jamming with frineds. When I have times like this I feel happy inside and I want to keep feeling this way.</p>
+        <p> When I get to play my Ukulele, I feel a sense of joy when others come to see me play and I feel happy to see close friends ask how to play Ukulele.</p>
+        <p>A absolute link is a complete web adress.</p>
+        <p>A relative link is a link that specifies the location of another page.</p>
+        <p>Down here is a relative link to my profile page.</p>
         <p><a href="../ProfilePage.html">ProfilePage</a></p>
+    
+        <h2>Diff color text</h2>
+        <ul>
+            <li> <span>I chose auqa to emphasize text</span></li>
+            <li>I chose brown to de-emphasize text</li>
+            <li>I chose my colors by looking online or thinking outside the box and making sure it looks appealing.</li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2025 Micah Kanana</p>
