--- a/projects/intrest/intrest.html
+++ b/projects/intrest/intrest.html
@@ -10,7 +10,7 @@
     <header><h1>Intrest</h1></header>
     
     <nav>
-        <a href="http:hero.html">Hero</a>
+        <a href="hero.html">Hero</a>
         <span>Intrest</span>
     </nav>
     <main>
