--- a/activities/Images.html/images.html
+++ b/activities/Images.html/images.html
@@ -17,6 +17,11 @@
     <main>
         <h2>Images</h2>
         <img src="WaimeaBay.jpg"Waimea Bay, Waimea Rock">
+        <p>JPEG works best for photographs or images with lots of colors and smooth gradients. </p>
+        <p>GIF is better for simple images that don’t use many colors</p>
+        <p>PNG is a kind of middle ground.</p>
+        <p>To actually change the image size (pixels) to match how big it will appear on screen.</p>
+        <p>If you just resize with CSS, the browser still has to load the full-size picture and then shrink it, which wastes data and slows down your page.</p>
     </main>
     <footer>
         <p>&copy; 2025 Micah Kanana</p>
