--- a/activities/Images.html/images.html
+++ b/activities/Images.html/images.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h2>Images</h2>
-        <img src="WaimeaBay.jpg"Waimea Bay, Waimea Rock">
+        <img src="WaimeaBay.jpg"Waimea Bay, Waimea Rock>
         <p>JPEG works best for photographs or images with lots of colors and smooth gradients. </p>
         <p>GIF is better for simple images that don’t use many colors</p>
         <p>PNG is a kind of middle ground.</p>
