--- a/activities/Positions/positioning.html
+++ b/activities/Positions/positioning.html
@@ -27,6 +27,11 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quibusdam impedit ipsum molestiae saepe earum labore deleniti exercitationem dolor. Quibusdam facere amet explicabo corrupti fuga molestias quo assumenda earum delectus.</p>
         <div class="clear"></div>
+        <p>Normal flow is the browser default way of laying out elements.</p>
+        <p>the float property moves an element to the left or right.</p>
+        <p>position relative stay in normal flow. Absolute is removed from normal flow. Fixed is positioned relative to the browser.</p>
+        <p>Keep navigation simple or make them bigger.</p>
+        <p>You can find the videos in canvas on the home page.</p>
     </main>
     <footer>
         <p>&copy; 2025 Micah Kanana</p>
