--- a/activities/responsive/responsive.html
+++ b/activities/responsive/responsive.html
@@ -41,6 +41,10 @@
                     <h3>Family Friendly beach in Waianae</h3>
                 </article>
             </div>
+            <p>The veiwport meta tag is important because it is a mobile-friendly tag and a very responsive tag.
+            Without this tag, your website would look zoomed out on a mobile phone.</p>
+            <p>When you select a sane tag twice but use it with a different value such as flex-direction, the higher specialty goes first.</p>
+            <p>To change CSS for phones, use CSS media queries.</p>
         </main>
     </div>
     <footer>
