--- a/projects/Family/Family.html
+++ b/projects/Family/Family.html
@@ -27,10 +27,9 @@
       </figure>
       <ul>
         <li>The Radom family enjoys hiking together every spring.</li>
-        <li>We inherited a collection of classic board games from Grandpa Glen.</li>
-        <li>Our dog, Poppy, is always the first to greet guests.</li>
-        <li>Three generations live within a ten-mile radius.</li>
-        <li>Family pizza night happens every Friday.</li>
+        <li>We inherited a collection of classic board games from Grandpa.</li>
+        <li>Our dog, Kekoa, is always the first to greet guests.</li>
+        <li>Family pizza night happens every Wednesday.</li>
       </ul>
     </aside>
     <main>
@@ -43,7 +42,7 @@
           <figcaption>Reaching the Summit</figcaption>
         </figure>
         <p>
-          The Radoms completed a challenging mountain hike this summer. Everyone, from the youngest cousin to Grandpa, reached the top with determination. The group photo at the peak will be a family favorite for years to come.
+          The Family completed a challenging mountain hike this summer. Everyone, from the youngest cousin to Grandpa, reached the top with determination. The group photo at the peak will be a family favorite for years to come.
         </p>
       </article>
       <article>
@@ -52,16 +51,16 @@
           <figcaption>Champion Board Gamers</figcaption>
         </figure>
         <p>
-          Last weekend’s board game tournament brought out everyone’s competitive side. From strategy games to word games, laughter filled the house. Clara and Poppy took the prize with a surprise comeback in the final round.
+          Last weekend’s board game tournament brought out everyone’s competitive side. From strategy games to word games, laughter filled the house. Merna and Kekoa took the prize with a surprise comeback in the final round.
         </p>
       </article>
       <article>
         <figure>
           <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=300&q=80" alt="Pizza making" width="180">
-          <figcaption>Friday Pizza Tradition</figcaption>
+          <figcaption>Wednesday Pizza Tradition</figcaption>
         </figure>
         <p>
-          Every Friday night, the kitchen becomes a pizza parlor. Family members pick their own toppings and share stories from the week. It’s a simple ritual that brings everyone together and ends the week on a happy note.
+          Every Wednesday night, the kitchen becomes a pizza parlor. Family members pick their own toppings and share stories from the week. It’s a simple ritual that brings everyone together and ends the week on a happy note.
         </p>
       </article>
     </main>
