--- a/activities/tables/tables.html
+++ b/activities/tables/tables.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <h1>Tables</h1>
-        <table border="1">
+                <table>
             <caption>Workout Plan</caption>
             <tr>
                 <td>Mon</td>
@@ -27,8 +27,8 @@
                 <td>Push</td>
                 <td>Pull</td>
                 <td>Core</td>
-                <td>Lower </td>
-                <td>Full </td>
+                <td>Lower</td>
+                <td>Full</td>
                 <td>Run</td>
                 <td>Rest</td>
             </tr>
