--- a/activities/tables/tables.html
+++ b/activities/tables/tables.html
@@ -36,7 +36,8 @@
         <p>The best time to use a table is when your information is best used in a table like 
             a class schedual.
         </p>
-        <p></p>
+        <p>Deprecated in HTML5 and very limited. </p>
+        <p>The simplest modern method is to use the CSS pseudo-class :nth-child() selector</p>
     </main>
     <footer>
         <p>&copy; 2025 Micah Kanana</p>
