--- a/projects/Family/Family.html
+++ b/projects/Family/Family.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>The Radom Family</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="radom_family_style.css">
+  <link rel="stylesheet" href="Family.css">
 </head>
 <body>
   <header>
