--- a/activities/Forms/Forms.html
+++ b/activities/Forms/Forms.html
@@ -11,6 +11,7 @@
         <h1>Web Page</h1>
     </header>
     <main>
+        <div class="message"></div>
         <h1>Forms</h1>
         <form action="Forms.html" method="post">
             <fieldset>
@@ -86,6 +87,23 @@
             };
 
             console.log(formData);
+
+            const xhr = new XMLHttpRequest();
+            xhr.open("GET", "submit.json", true);
+            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    alert("Form submitted successfully!");
+                    const response = JSON.parse(xhr.responseText);
+                    console.log(response);
+                    //document.getElementById(ʻmyFormʻ).reset();
+                    document.getElementById('myForm').innerHTML = '';
+                    document.getElementById('message').innerText = response.message;
+                } else if (xhr.readyState === 4) {
+                    alert("Error submitting form.");
+                }            
+            };
+            xhr.send(JSON.stringify(formData));
         })
     </script>
 </body>
