--- a/projects/forms/forms.html
+++ b/projects/forms/forms.html
@@ -85,5 +85,5 @@
     <footer>
         &copy;2025 Micah Kanana
     </footer>
-    <script src="forms.js"></script>
+    <script scr="forms.js"></script>
 </html>
