--- a/final/Final/culture.html
+++ b/final/Final/culture.html
@@ -14,6 +14,8 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="culture.html" class="active">Culture</a></li>
       <li><a href="history.html">History & Data</a></li>
+      <li><a href="voyaging.html">Voyaging</a></li>
+      <li><a href="kapu.html">Kapu System</a></li>
       <li><a href="contact.html">Share Manaʻo</a></li>
     </ul>
   </nav>
