--- a/final/Final/history.html
+++ b/final/Final/history.html
@@ -9,11 +9,13 @@
 <body class="history-page">
 <header>
   <h1>Hawaiian Culture & History</h1>
-  <nav>
+  <nnav>
     <ul class="main-nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="culture.html">Culture</a></li>
       <li><a href="history.html" class="active">History & Data</a></li>
+      <li><a href="voyaging.html">Voyaging</a></li>
+      <li><a href="kapu.html">Kapu System</a></li>
       <li><a href="contact.html">Share Manaʻo</a></li>
     </ul>
   </nav>
