--- a/final/Final/index.html
+++ b/final/Final/index.html
@@ -10,13 +10,15 @@
 <header>
   <h1>Hawaiian Culture & History</h1>
   <nav>
-    <ul class="main-nav">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="culture.html">Culture</a></li>
-      <li><a href="history.html">History & Data</a></li>
-      <li><a href="contact.html">Share Manaʻo</a></li>
-    </ul>
-  </nav>
+  <ul class="main-nav">
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="culture.html">Culture</a></li>
+    <li><a href="history.html">History & Data</a></li>
+    <li><a href="voyaging.html">Voyaging</a></li>
+    <li><a href="kapu.html">Kapu System</a></li>
+    <li><a href="contact.html">Share Manaʻo</a></li>
+  </ul>
+</nav>
 </header>
 
 <main>
