--- a/final/Final/index.html
+++ b/final/Final/index.html
@@ -36,6 +36,16 @@
 </main>
 
 <footer>
+  <div class="references">
+    <h3>References</h3>
+    <ol>
+      <li><a href="https://www.nps.gov/locations/hawaii/heritage.htm" target="_blank">Native Hawaiian Heritage & Culture</a> - National Park Service</li>
+      <li><a href="https://hawaiihumpbackwhale.noaa.gov/heritage/native-culture.html" target="_blank">Native Hawaiian Culture</a> - NOAA</li>
+      <li><a href="https://www.gohawaii.com/hawaiian-culture/history" target="_blank">Hawaiian History</a> - Go Hawaii</li>
+      <li><a href="https://en.wikipedia.org/wiki/Culture_of_the_Native_Hawaiians" target="_blank">Culture of Native Hawaiians</a> - Wikipedia</li>
+      <li><a href="https://www.papahanaumokuakea.gov/heritage/" target="_blank">Native Hawaiian Cultural Heritage</a> - Papahānaumokuākea</li>
+    </ol>
+  </div>
   <p>&copy; 2025 Micah Kanana</p>
 </footer>
 </body>
