--- a/final/Final/culture.html
+++ b/final/Final/culture.html
@@ -38,11 +38,7 @@
     <h2>Video</h2>
     <p>The video below shows what the meaning behind the word lūʻau. </p>
     <div class="video-wrapper">
-      <iframe src="https://youtu.be/aIQ1bl7SBz4?si=-eexSbYrSktAnmh4"
-        title="The Story of the Lūʻau: The History and Culture of the Lūʻau"
-              frameborder="0"
-              allowfullscreen>
-      </iframe>
+      <iframe src="https://www.youtube.com/embed/aIQ1bl7SBz4" title="Video title" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
 </main>
